# knaz

./: MANIFEST.in  README.md
docs/: DEMO_SCRIPT.md  (+2 more)
knaz_fleet/: hooks.py  install.py  license.txt  package.json  pyproject.toml  tasks.py  utils.py
knaz_fleet/api/: dashboard.py
knaz_fleet/knaz_fleet/: modules.txt
knaz_fleet/knaz_fleet/api/: operations.py
knaz_fleet/knaz_fleet/config/: desktop.py
knaz_fleet/knaz_fleet/doctype/knaz_approval_matrix/: knaz_approval_matrix.json  knaz_approval_matrix.py
knaz_fleet/knaz_fleet/doctype/knaz_collection_case/: knaz_collection_case.py
knaz_fleet/knaz_fleet/doctype/knaz_insurance_claim/: knaz_insurance_claim.json
knaz_fleet/knaz_fleet/doctype/knaz_insurance_claim_follow_up/: knaz_insurance_claim_follow_up.json  knaz_insurance_claim_follow_up.py
knaz_fleet/knaz_fleet/doctype/knaz_legal_case/: knaz_legal_case.json
knaz_fleet/knaz_fleet/doctype/knaz_legal_session/: knaz_legal_session.py
knaz_fleet/knaz_fleet/doctype/knaz_rental_contract/: knaz_rental_contract.json
knaz_fleet/knaz_fleet/doctype/knaz_system_alert_rule/: knaz_system_alert_rule.json
knaz_fleet/knaz_fleet/doctype/knaz_vehicle/: knaz_vehicle.json  knaz_vehicle.py
knaz_fleet/knaz_fleet/doctype/knaz_vehicle_accident/: knaz_vehicle_accident.json  knaz_vehicle_accident.py
knaz_fleet/public/js/: knaz_fleet.js
knaz_fleet/report/knaz_collection_aging/: knaz_collection_aging.py
knaz_fleet/report/knaz_vehicle_status_summary/: knaz_vehicle_status_summary.json
knaz_fleet/report/knaz_workshop_cost_summary/: knaz_workshop_cost_summary.py
(+26 files in other folders)
