[project]
name = "knaz_fleet"
authors = [{ name = "Knaz", email = "knaz.rnt@gmail.com" }]
description = "Knaz Fleet Operations ERP custom app for ERPNext/Frappe Cloud"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"

[tool.ruff]
line-length = 110
